--- a/server.local.ini
+++ b/server.local.ini
@@ -5,6 +5,8 @@ master = true
 processes = 4
 gevent = 20000
 gevent-monkey-patch = true
+
+http-websockets=true
 http = 0.0.0.0:80
 
 die-on-term = true
